--- a/example/src/main/res/values/dimens.xml
+++ b/example/src/main/res/values/dimens.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2020 Google LLC
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,10 +15,13 @@
 -->
 
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="app_bar_height">200dp</dimen>
-    <dimen name="item_width">200dp</dimen>
-    <dimen name="large_text_margin">24dp</dimen>
-    <dimen name="text_margin">16dp</dimen>
-    <dimen name="small_text_margin">2dp</dimen>
+  <dimen name="fab_margin">16dp</dimen>
+  <dimen name="app_bar_height">200dp</dimen>
+  <dimen name="item_width">200dp</dimen>
+  <dimen name="large_text_margin">24dp</dimen>
+  <dimen name="text_margin">16dp</dimen>
+  <dimen name="small_text_margin">2dp</dimen>
+  <!-- Default screen margins, per the Android Design guidelines. -->
+  <dimen name="activity_horizontal_margin">16dp</dimen>
+  <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
